# trading_bot

./: .gitignore  Makefile  README.md  TradePosition.py  TradingStrategyEvaluator.py  backtest_data_manager.py  backtester.py  backtester_main.py  config.yml  cryptobot.py  genetic_algo.py  genetic_optimizer.py  logger.py  main.py  pyproject.toml  results_analyzer.py
data/: generate_data.py
docs/: ARCHITECTURE.md  GETTINGSTARTED.md  STRATEGIES.md  sell_return_calculus.md
examples/: optimization_example.py
lib/: BinanceClient.py  BinancedataFetch.py  Datagenerator.py  Logger.py  ModelConfig.py  shared.py
lib/core/: Action.py  DataManager.py  FeaturesEnum.py  Market.py  Position.py  Strat.py  TradeConfig.py  Trader.py  fetch_kline_data.py  strats.py  utils.py
scripts/: csv_to_mongodb.py  download_data.py  migrate_logging.py  show_data_status.py  simple_market_monitor.py  test_backtest.py  test_mongodb.py
src/bybit_trading_helper/: app.py  bybit_ws_client.py  risk_manager.py
src/bybit_trading_helper/front/: tailwind.config.js
src/bybit_trading_helper/templates/: margin_trader.html
src/ob_trading/: models.py  producer.py
src/ob_trading/order_imbalance/: advanced_signal_processor.py  app.py  delta_calculator.py  producer.py  signal_processor.py
src/trading_bot/: __init__.py
src/trading_bot/backtesting/: __init__.py  analyzer.py  engine.py
src/trading_bot/core/: enums.py  logging.py  models.py  settings.py  utils.py
src/trading_bot/data/: binance_client.py  clickhouse_storage.py  market_data.py  storage.py
src/trading_bot/optimization/: __init__.py  genetic.py
strategies/: BaseStrategy.py  EMACrossoverStrategy.py  FlexibleMultiFactorStrategy.py  MultiFactorStrategy.py  VWAPBounceStrategy.py
tests/: backtest_popular_volatyle_coins.py  debug_strategy.py  optimize_multifactor.py  tes_ai_assisted_strategy.py  test_adaptative_5min.py  test_backtest.py  test_claude_api.py  test_multifactor.py  test_opti_timebased.py  test_optimized_multifactor.py  test_optimized_vol_strategy.py  test_optimized_vs_default.py  test_rsi_divergence_strat.py  test_svm_strategy.py  test_vwap_bounce.py  try_click_house.py
(+50 files in other folders)
