[tool.poetry]
name = "trading-bot"
version = "0.2.0"
description = "Trading strategy backtesting framework with ClickHouse"
authors = ["Majdoub Khalid <majdoub.khalid@gmail.com>"]
packages = [{include = "trading_bot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.0.0"
numpy = "^1.24.0"
ta = "^0.10.2"
binance-connector = "^3.7.0"
pymongo = "^4.5.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
pyyaml = "^6.0"
tqdm = "^4.65.0"
deap = "^1.4.1"
scikit-learn = "^1.3.0"
requests = "^2.31.0"
clickhouse-connect = "^0.6.0"
scipy = "^1.16.0"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
jupyter = "^1.0.0"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.12.0"
autoflake = "^2.3.1"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = ["E501"]  # Line too long

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.isort]
profile = "black"
line_length = 100